--- a/style.css
+++ b/style.css
@@ -628,9 +628,9 @@
         margin-top: 100px;
     }
     
-    .col-lg-4 {
-        margin-left: -3%;
-    }
+   .mass {
+    margin-left: -3%;
+}
     /* End Subscribe Section */
 
 
